Fixing spacing in post titles on post list.html

--- a/blog/themes/jxf-theme/assets/styles/partials/_content.scss
+++ b/blog/themes/jxf-theme/assets/styles/partials/_content.scss
@@ -26,7 +26,7 @@
 }
 
 .content-item__info {
-    margin-top: $margin*3.5;
+    margin-top: $margin*1.8;
 }
 
 .content-item__body {
@@ -103,7 +103,7 @@
   }
 
   .content-item__title {
-    margin-top: 0;
+    margin: 1rem 0;
   }
 
   @media (max-width: 70em) {
